# gd-ai-designer

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  mod.json
.claude/agents/: code-janitor.md
.claude/commands/: janitor.md
docs/: ARCHITECTURE.md  CODE_HYGIENE.md  COLLABORATION.md  DATA_COLLECTION.md  DATA_FORMAT.md  DESIGNER.md  DEV_SETUP.md  ENCODER.md  INTERFACES.md  MOD_API.md  PLANNER.md  ROADMAP.md
ml/: pyproject.toml
ml/render/: package.json
ml/scripts/: build_db.py  collect_raw.py  export_test_gmd.py  inspect_ids_gmd.py  parse_levels.py  render_future_funk_test.py  render_state_test.py  strip_decoration_test.py
ml/src/gd_designer/data/: config.py  db.py  fetch.py  gd_keys.py  parse.py  rate_limiter.py  schema.py
ml/src/gd_designer/encoder/: __init__.py  boundary.py  config.py  metrics.py  model.py  prototypes.py  refine.py  tokenizer.py  trainer.py  windowizer.py
mod/: CMakeLists.txt
mod/src/: Designer.cpp  main.cpp
mod/src/core/: DecorationOp.hpp  Geometry.hpp  Layout.hpp  ObjectIDs.cpp  ObjectIDs.hpp  Strategy.hpp
mod/src/gd/: DecorationApplier.cpp  DecorationApplier.hpp  LayoutReader.cpp  LayoutReader.hpp
mod/src/strategies/: RuleBasedStrategy.cpp  RuleBasedStrategy.hpp
mod/src/tools/: DumpObjectIDs.cpp  DumpObjectIDs.hpp
mod/src/ui/: EditorButton.cpp
src/: Designer.hpp
