[project]
name = "gd-designer"
version = "0.1.0"
description = "GD Design AI - ML training and serving"
requires-python = ">=3.11"
dependencies = [
    "gd.py>=1.0.0",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gd_designer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
